--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre los mejores tatuajes en Córdoba, Argentina. Especializados en diseños personalizados únicos que reflejan tu estilo y personalidad. ¡Visítanos para crear tu próximo arte en la piel!">
+    <meta name="keywords" content="Tatuajes en Córdoba, Tatuajes personalizados, Estudios de tatuajes en Córdoba, Diseños de tatuajes únicos, Artistas del tatuaje en Córdoba, Tatuajes a medida, Estudio de tatuajes personalizado, Tatuadores en Córdoba Argentina, Tatuajes de calidad en Córdoba, Arte corporal en Córdoba, Tatuajes originales Córdoba, Diseños de tatuajes personalizados, Estudio de tatuajes profesional, Tatuajes artísticos en Córdoba, Mejor estudio de tatuajes en Córdoba, Milo tatuajes, tatuajes don bosco, tatuajes zona norte">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-
-    <title>Milotatoo</title>
+    <link rel="shortcut icon" href="./pages/imagenes/favicon.ico" type="image/x-icon">
+    <title>Inicio | Milotattoo</title>
 </head>
 <body>
     <header>
