--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contáctanos para más información sobre nuestros tatuajes en Córdoba. Reserva tu cita o consulta con Milo sobre diseños personalizados. Estamos aquí para ayudarte.">
+    <meta name="keywords" content="Contacto tatuajes Córdoba, Información tatuajes, Reserva cita tatuajes, Consultas diseños tatuajes, Estudio de tatuajes contacto, Tatuajes personalizados contacto, Teléfono estudio de tatuajes, instagram estudio de tatuajes, Dirección estudio de tatuajes, Formulario de contacto tatuajes, Consultas tatuajes Córdoba, Contacto artistas tatuajes, Tatuajes Córdoba contacto, Atención al cliente tatuajes, Preguntas sobre tatuajes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <title>Document</title>
+    <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
+    <title>Contacto | Milotattoo</title>
 
 </head>
 <body>
