--- a/pages/disenios.html
+++ b/pages/disenios.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora nuestros diseños de tatuajes únicos en Córdoba, incluyendo dibujos propios de milo. Diseños personalizados que reflejan tu estilo y pasión por el arte">
+    <meta name="keywords" content="Diseños de tatuajes únicos, Tatuajes Córdoba diseños, Diseños personalizados tatuajes, Dibujos de Leigh Whannell, Tatuajes artísticos Córdoba, Tatuajes de Leigh Whannell, Arte de tatuajes personalizado, Diseños exclusivos tatuajes, Tatuajes de artistas famosos, Diseños de tatuajes Córdoba, Inspiración Leigh Whannell tatuajes, Tatuajes creativos Córdoba, Estudio de tatuajes diseños, Tatuajes y arte Leigh Whannell, Diseños únicos en Córdoba">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <title>Document</title>
+    <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
+    <title>Diseños | Milotattoo</title>
 </head>
 <body>
     <header>
