--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora nuestra galería de fotos de tatuajes en Córdoba. Descubre diseños personalizados y trabajos de nuestros talentosos artistas. Inspírate para tu próximo tatuaje.">
+    <meta name="keywords" content="Fotos de tatuajes, Galería de tatuajes Córdoba, Imágenes de tatuajes personalizados, Tatuajes en Córdoba, Fotos de tatuajes artísticos, Tatuajes de calidad Córdoba, Diseños de tatuajes en fotos, Tatuajes personalizados en Córdoba, Galería de arte corporal, Tatuajes creativos fotos, Trabajos de tatuajes Córdoba, Inspiración tatuajes fotos, Fotos de tatuajes únicos, Arte de tatuajes en imágenes, Muestra de tatuajes Córdoba, tatuajes don bosco, tatuajes zona norte, tatuajes blackwork">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <title>Document</title>
+    <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
+    <title>Trabajos | Milotattoo</title>
 </head>
 <body>
     <header>
