--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Reserva tu turno en nuestro estudio de tatuajes en Córdoba. Garantiza tu cita con nuestra artista y obtén los diseños de tatuaje personalizado que deseas.">
+    <meta name="keywords" content="Reserva de turnos tatuajes, Turnos para tatuajes Córdoba, Cita tatuajes personalizados, Turnos online tatuajes, Reservar cita tatuaje Córdoba, Turnos estudio de tatuajes, Tatuajes Córdoba reserva, Agendar turno tatuaje, Tatuajes personalizados turnos, Reserva de citas tatuajes Córdoba, Turnos rápidos tatuajes, Turnos tatuajes a medida, Cita con artistas del tatuaje, Turnos en línea tatuajes, Tatuajes Córdoba agendar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <title>Document</title>
+    <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
+    <title>Turnos | Milotattoo</title>
 </head>
 <body>
 
